--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">蓝牙鼠标</string>
+    <string name="app_name">蓝牙手柄</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
